# scicomp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/lv/: lv.cpp  lv.h
src/ns/: ns.cpp  ns.h
src/utils/: cli.cpp  cli.h  matrix.cpp  matrix.h  plotting.cpp  plotting.h
test/: CMakeLists.txt
test/src/: main.cpp
